fun bug gone no more grid gap

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,4 +1,4 @@
 footer {
     text-align: center;
-    margin-top: 20px;
+    margin: 20px 0;
 }
