--- a/styles/partials/_form.scss
+++ b/styles/partials/_form.scss
@@ -14,7 +14,7 @@ label {
 .location-flex {
     width: 100%;
     margin: 0;
-    display: flex;
+    // display: flex;
     justify-content: space-between;
 }
 
