--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -1,6 +1,5 @@
 /* Default styles */
 img {
-    // max-width:300px;
     width: 100%;
     display: block;
     max-height: 400px;
@@ -63,9 +62,9 @@ h3 {
     font-weight: $extra-bold;
     font-family: $accent-font;
     // Keep the name to one line
-    // max-height: 42px;
-    // overflow: hidden;
-    // text-align: center;
+    max-height: 42px;
+    overflow: hidden;
+    text-align: center;
 }
 
 // Additional class styles
@@ -80,7 +79,7 @@ h3 {
     box-shadow: 2px 8px 20px $accent-color;
     transition: border 500ms, box-shadow 500ms, border-radius 200ms;
     display: block;
-    margin: 40px auto;
+    margin: 20px auto;
    
     &:hover, &:active, &:focus {
         border: 4px solid $accent-color;
