--- a/styles/styles.css
+++ b/styles/styles.css
@@ -195,7 +195,10 @@ h2 {
 h3 {
   font-size: 1.3rem;
   font-weight: 800;
-  font-family: "Love Ya Like A Sister", cursive; }
+  font-family: "Love Ya Like A Sister", cursive;
+  max-height: 42px;
+  overflow: hidden;
+  text-align: center; }
 
 .button {
   font-family: "Love Ya Like A Sister", cursive;
@@ -212,7 +215,7 @@ h3 {
   transition: border 500ms, box-shadow 500ms, border-radius 200ms;
   transition: border 500ms, box-shadow 500ms, border-radius 200ms, -webkit-box-shadow 500ms;
   display: block;
-  margin: 40px auto; }
+  margin: 20px auto; }
   .button:hover, .button:active, .button:focus {
     border: 4px solid slateblue;
     -webkit-box-shadow: 0px 4px 20px 10px slateblue;
@@ -237,9 +240,6 @@ label {
 .location-flex {
   width: 100%;
   margin: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
@@ -339,14 +339,16 @@ select {
 
 footer {
   text-align: center;
-  margin-top: 20px; }
+  margin: 20px 0; }
 
 .grid-container {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 2% 5%; }
+  grid-gap: 30px;
+  min-width: 0;
+  min-height: 0; }
 
 .grid-item {
   display: -webkit-box;
